add some comps and readme.md

--- a/pages/test/swiper/swiper.wxml
+++ b/pages/test/swiper/swiper.wxml
@@ -15,5 +15,6 @@
     </swiper-item>     
 </swiper>
 <view>
-    <text>{{text}}</text>
+    <text>  {{text}}  </text>
+    <text>  {{test}}  </text>
 </view>
