--- a/pages/test/button/button.wxml
+++ b/pages/test/button/button.wxml
@@ -1,5 +1,24 @@
 <view class="container">
-  <view class="textContainer">
-    <text class="textStyle">{{text}}</text>
-  </view>
+  <button type="default" 
+        size="{{defaultSize}}" 
+        loading="{{loading}}" 
+        plain="{{plain}}"
+        disabled="{{disabled}}" 
+        bindtap="default" 
+        hover-class="other-button-hover"> default </button>
+  <button type="primary" 
+        size="{{primarySize}}" 
+        loading="{{loading}}" 
+        plain="{{plain}}"
+        disabled="{{disabled}}" 
+        bindtap="primary"> primary </button>
+  <button type="warn" 
+        size="{{warnSize}}" 
+        loading="{{loading}}" 
+        plain="{{plain}}"
+        disabled="{{disabled}}" 
+        bindtap="warn"> warn </button>
+  <button bindtap="setDisabled">点击设置以上按钮disabled属性</button>
+  <button bindtap="setPlain">点击设置以上按钮plain属性</button>
+  <button bindtap="setLoading">点击设置以上按钮loading属性</button>
 </view>
